--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.KotlinCraft"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.view.main.record.RecordActivity"
+            android:name=".presentation.view.record.RecordActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.view.main.MainActivity"
