--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"  // viewModel
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0"   // liveData
+    implementation 'androidx.activity:activity-ktx:1.4.0'   // by viewModels()
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'   // by activityViewModels()
     //Room
     implementation("androidx.room:room-runtime:2.4.3")
     annotationProcessor("androidx.room:room-compiler:2.4.3")
