--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.KotlinCraft"
         tools:targetApi="31">
         <activity
-            android:name=".view.RecordActivity"
+            android:name=".presentation.view.record.RecordActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MainActivity"
+            android:name=".presentation.view.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
